fixed issue on mobile about buttons while hovering

--- a/sections/_projects.scss
+++ b/sections/_projects.scss
@@ -92,9 +92,12 @@ $black: hsl(0, 0%, 20%);
   grid-template-columns: repeat(2, 1fr);
 }
 .projects__btn {
-  opacity: 0;
+  opacity: 1;
   font-size: f.rem(18);
   @include m.trans-ease;
+  background: $p-color;
+  border-radius: f.rem(20);
+  padding: f.rem(8) f.rem(12);
 
   &:hover {
     color: $black;
@@ -128,5 +131,10 @@ $black: hsl(0, 0%, 20%);
     width: 100%;
     margin-block-end: f.rem(10);
     // text-transform: uppercase;
+  }
+  .projects__btn {
+    opacity: 0;
+    font-size: f.rem(26);
+    background: none;
   }
 }
